--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -25,11 +25,8 @@
       margin-right: 80px;
       padding-left: 50px;
 
-      > img {
-        margin-right: 40px;
-      }
-
       > div {
+        margin-left: 40px;
         width: 280px;
         > span {
           font-size: 15px;
