--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -4,7 +4,7 @@
         width: 100%;
         height: 760px;
         background: url('../../assets/img/people.png') no-repeat center center fixed;
-        background-size: auto;
+        background-size: cover;
         background-position: top;
         background-color: black;
         margin-top: -78px;
