--- a/src/styles/works.scss
+++ b/src/styles/works.scss
@@ -103,6 +103,7 @@
                     }
         
                     a {
+                        width: fit-content;
                         display: flex;
                         align-items: center;
                         text-decoration: none;
