--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -99,7 +99,7 @@
                 font-size: 18px;
                 color: #757575;
                 padding-bottom: 100px;
-                border-bottom: 1px solid #eeeeee;
+                // border-bottom: 1px solid #eeeeee;
                 
                 p{ max-width: 620px; }
                 p:nth-child(2) { padding-left: 30px }
