--- a/src/styles/careers.scss
+++ b/src/styles/careers.scss
@@ -28,8 +28,10 @@
                 padding-left: 40px;
                 text-decoration: none;
                 color: black;
+                transition:  box-shadow .25s, color .25s;
 
                 &:hover {
+                    transition:  box-shadow .25s, color .25s;
                     box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.16);
                     color: $lightblue;
                 }
