--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -19,8 +19,8 @@
             flex-direction: column;
             font-size: 20px;
             padding: 0 20px;
-            // flex: 1 1 320px;
-
+            color: white;
+            text-decoration: none;
 
             > img {
                 width: 100%
@@ -37,7 +37,7 @@
     .section-services {
         .cards-services {
             .card-services {
-                flex: 1 1 320px
+                flex: 1 1 320px;
             }
         }
     }
