--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -17,7 +17,8 @@
             justify-content: center;
             align-items: flex-end;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), $bgColor);   
-            
+            z-index: 2;
+
             .text {
                 width: 1360px;
                 display: flex;
@@ -39,6 +40,14 @@
                     line-height: 1.42;
                 }
             }
+        }
+        .darkened-block {
+            background-color: $bgColor;
+            opacity: 0.5;
+            position: absolute;
+            top: 0; bottom: 0;
+            left: 0; right: 0;
+            z-index: 1;
         }
     }
     .three-columns {
