--- a/src/styles/get-in-touch.scss
+++ b/src/styles/get-in-touch.scss
@@ -16,7 +16,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    display: none;
     overflow-y: auto;
     padding-top: 100px;
     z-index: 999;
@@ -152,6 +151,7 @@
         transform: scale(0.5);
         top: 10px;
         right: 10px;
+        padding: 20px;
         cursor: pointer;
     }
 }
