--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -3,7 +3,6 @@
 
     .map-bg {
         width: 100%;
-        height: 760px;
         background-color: $bgColor;
         display: flex;
         justify-content: center;
@@ -19,7 +18,8 @@
             flex-direction: column;
             justify-content: space-between;
             @include padding-both;
-            padding-top: 50px;
+            padding-top: 170px;
+            padding-bottom: 100px;
 
             h1 {
                 font-size: 64px;
