--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -23,7 +23,9 @@
             text-decoration: none;
 
             > img {
-                width: 100%
+                width: 320px;
+                height: 180px;
+                // width: 100%
             }
             > span {
                 margin-top: 50px;
