--- a/src/styles/AI.scss
+++ b/src/styles/AI.scss
@@ -2,7 +2,7 @@
     height: calc(50vh - 60px);
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     transform: translateY(100px);
     position: relative;
     pointer-events: none;
