--- a/src/styles/experties.scss
+++ b/src/styles/experties.scss
@@ -8,8 +8,8 @@
         color: white;
         padding-top: 95px;
         padding-bottom: 65px;
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 45px;
+        padding-right: 45px;
         position: relative;
 
         &-container {
@@ -24,9 +24,12 @@
                     font-size: 75px;
                 }
                 p {
+                    max-width: 680px;
+                    line-height: 1.4;
                     font-family: 'Proxima Nova';            
                     font-size: 18px;
                     margin-top: 35px;
+                    opacity: .5;
                 }
             }
         }
@@ -56,6 +59,7 @@
                     flex-direction: row-reverse;
                 }
                 img {
+                    width: 90%;
                     padding: 20px;
                 }
                 .text-block {
@@ -64,7 +68,7 @@
                         h1 {
                             max-width: 525px;
                             font-family: 'Montserrat Bold';
-                            font-size: 40px;
+                            font-size: 35px;
                             margin-bottom: 30px;
                         }
                         p {
@@ -81,12 +85,26 @@
                             margin-bottom: 25px;
                         }
                         ul {
+                            width: fit-content;
                             display: flex;
                             flex-direction: column;
-                            flex-wrap: wrap;
-                            height: 71px;
                             color: #757575;
+                            margin-left: 35px;
                             
+                            li {
+                                position: relative;
+                            } 
+
+                            li::before {
+                                content: '';
+                                width: 24px;
+                                height: 1px;
+                                background-color: #2962ff;
+                                position: absolute;
+                                left: -35px;
+                                margin-top: 7px;
+                            }  
+
                             li + li {
                                 margin-top: 10px;
                             }
@@ -158,6 +176,10 @@
                 .content {
                     flex-wrap: wrap;
                     justify-content: center;
+
+                    img {
+                        display: none;
+                    }
                 }                
             }
         }
@@ -169,8 +191,15 @@
         .about-applications {
             .container {
                 .content {
-                    img{
-                        width: calc(100%);
+                    .text-block {
+                        .text-up {
+                            h1 {
+                                font-size: 7vw;
+                            }
+                            p {
+                                font-size: 4vw;
+                            }
+                        }
                     }
                 }                
             }
