--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,7 +20,7 @@
 }
 .add-opacity-zero {
     opacity: 0 !important;
-    transition: opacity .5s !important;
+    transition: opacity .25s !important;
 }
 .open-pop-up {
     position: absolute;
@@ -52,4 +52,29 @@
     backface-visibility: hidden;
     will-change: transform;
     perspective: 1000;
+}
+
+.fade-up-ai {
+    transform: translateY(-200px);
+    opacity: 0;
+    transition: opacity .5s, transform .4s;
+}
+
+.content-canvas {
+    opacity: 1;
+    transition: opacity .25s;
+    position: static !important;
+}
+
+.scene {
+    position: absolute;
+    transform: rotate(90deg) translateY(-25%) translateX(-80%); 
+    z-index: 1;
+    right: 50%;
+}
+
+@media only screen and (max-width: 800px) {
+    .scene {
+        transform: rotate(90deg) translateY(-13%) translateX(-80%); 
+    }
 }
