fix swirl animation (add swirl => master)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -60,6 +60,10 @@
     transition: opacity .5s, transform .4s;
 }
 
+.opacity-swirl {
+    opacity: 0 !important;
+}
+
 .content-canvas {
     opacity: 1;
     transition: opacity .25s;
