--- a/docs/style.css
+++ b/docs/style.css
@@ -609,34 +609,37 @@ footer {
     position: absolute;
     left: 0;
     bottom: 20px; }
-  .scroll-section > .cards {
+  .scroll-section .cards {
     display: flex;
     padding-left: calc(50% - 700px);
     margin-bottom: -15px; }
-    .scroll-section > .cards > .card-home:not(:last-child) {
+    .scroll-section .cards > .card-home:not(:last-child) {
       z-index: 10; }
-    .scroll-section > .cards .card-home {
+    .scroll-section .cards .card-home {
       display: flex;
       align-items: center;
       margin-right: 80px;
       padding-left: 50px; }
-      .scroll-section > .cards .card-home > div {
+      .scroll-section .cards .card-home a .img-home {
+        width: 320px;
+        height: 180px; }
+      .scroll-section .cards .card-home > div {
         margin-left: 40px;
         width: 280px; }
-        .scroll-section > .cards .card-home > div > span {
+        .scroll-section .cards .card-home > div > span {
           font-size: 15px;
           opacity: .3; }
-        .scroll-section > .cards .card-home > div > p {
+        .scroll-section .cards .card-home > div > p {
           max-width: 225px;
           font-size: 24px;
           font-weight: bold;
           margin: 8px 0 0 0; }
-        .scroll-section > .cards .card-home > div > small {
+        .scroll-section .cards .card-home > div > small {
           display: inline-block;
           margin: 24px 0 74px 0; }
-          .scroll-section > .cards .card-home > div > small span {
+          .scroll-section .cards .card-home > div > small span {
             color: #9e9e9e; }
-        .scroll-section > .cards .card-home > div .arrow {
+        .scroll-section .cards .card-home > div .arrow {
           width: 32px;
           height: 32px;
           background: #2979ff;
@@ -644,9 +647,9 @@ footer {
           display: flex;
           justify-content: center;
           align-items: center; }
-          .scroll-section > .cards .card-home > div .arrow img {
+          .scroll-section .cards .card-home > div .arrow img {
             width: 17px; }
-    .scroll-section > .cards .borvo {
+    .scroll-section .cards .borvo {
       width: 100vw;
       display: flex;
       align-items: center;
@@ -655,16 +658,16 @@ footer {
       line-height: 1.4;
       transform: translateX(-400px);
       margin-right: -400px; }
-      .scroll-section > .cards .borvo .svg-container {
+      .scroll-section .cards .borvo .svg-container {
         transform-origin: 49% 58.5%;
         z-index: 5; }
-        .scroll-section > .cards .borvo .svg-container svg {
+        .scroll-section .cards .borvo .svg-container svg {
           outline: 150vh solid #0d0f1c;
           fill: #0d0f1c;
           display: inline-block; }
-        .scroll-section > .cards .borvo .svg-container .safari-svg {
+        .scroll-section .cards .borvo .svg-container .safari-svg {
           display: none; }
-      .scroll-section > .cards .borvo .neural {
+      .scroll-section .cards .borvo .neural {
         position: absolute;
         top: 0;
         left: 0;
@@ -673,9 +676,9 @@ footer {
         overflow: hidden;
         margin-bottom: 350px;
         pointer-events: none; }
-        .scroll-section > .cards .borvo .neural.scroll-x {
+        .scroll-section .cards .borvo .neural.scroll-x {
           overflow-y: auto; }
-        .scroll-section > .cards .borvo .neural .networks .networks-container {
+        .scroll-section .cards .borvo .neural .networks .networks-container {
           line-height: 1; }
 
 @media only screen and (max-width: 1400px) {
@@ -718,8 +721,9 @@ footer {
   .scroll-section .cards {
     padding-left: 50px;
     padding-right: 50px; }
-    .scroll-section .cards .card-home img {
-      width: 100%; }
+    .scroll-section .cards .card-home a .img-home {
+      width: 100%;
+      height: 100%; }
     .scroll-section .cards .card-home > div {
       width: auto; } }
 
@@ -2367,6 +2371,9 @@ footer {
   transform: translateY(-200px);
   opacity: 0;
   transition: opacity .5s, transform .4s; }
+
+.opacity-swirl {
+  opacity: 0 !important; }
 
 .content-canvas {
   opacity: 1;
