--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -10,7 +10,7 @@
     left: 0;
     bottom: 20px;
   }
-  > .cards {
+  .cards {
     display: flex;
     padding-left: calc(50% - 700px);
     margin-bottom: -15px;
@@ -24,6 +24,13 @@
       align-items: center;
       margin-right: 80px;
       padding-left: 50px;
+
+      a {
+        .img-home {
+          width: 320px;
+          height: 180px;
+        }
+      }
 
       > div {
         margin-left: 40px;
@@ -168,8 +175,11 @@
       @include padding-both;
 
       .card-home {
-        img{
-          width: 100%;  
+        a {
+          .img-home {
+            width: 100%;  
+            height: 100%;
+          }
         }
         > div {
           width: auto;
