--- a/src/styles/AI.scss
+++ b/src/styles/AI.scss
@@ -12,7 +12,16 @@
     opacity: 1;
     transition: opacity .3s;
 
+    video {
+        width: 95%;
+        border-radius: 10px;
+        opacity: 0.15;
+        transform: translateY(50px);
+        padding-right: 20px;
+    }
+
    &-container {
+       margin-left: -1300px;
        width: 1360px;
 
         .pulsatingCircle {
@@ -79,20 +88,33 @@
         }
    }
 }
+
 @media only screen and (max-width: 1500px) {
     .AI {
         &-container {
+            margin-left: -1200px;
             .pulsatingCircle {
                 display: none;
             }
         }
     }
 }
+@media only screen and (max-width: 1200px) {
+    .AI {
+        &-container {
+            margin-left: -840px;
+        }
+    }
+}
 @media only screen and (max-width: 855px) {
     .AI{
+        &-container {
+            margin-left: -700px;
+            font-size: 18px;
+        }
         @include padding-both;
-        padding-bottom: 200px;
-        height: 100%;
+        // padding-bottom: 200px;
+        // height: 100%;
         p {
             width: auto;
         }
@@ -101,14 +123,46 @@
 
 @media only screen and (max-width: 768px) {
     .AI {
+        &-container {
+            margin-left: -550px;
+        }
+        p {
+            font-size: 8vw;
+        }
         height: 30vh;
+        margin-top: -30px;
     }
 }
 
+@media only screen and (max-width: 650px) {
+    .AI {
+        &-container {
+            margin-left: -450px;
+        }
+    }
+}
+
+
 @media only screen and (max-width: 525px) {
     .AI {
-        p {
-            font-size: 13vw;
+        &-container {
+            margin-left: -350px;
+        }
+        margin-top: -70px;
+        
+        // p {
+        //     font-size: 13vw;
+        // }
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .AI {
+        &-container {
+            margin-left: 0;
+        }
+        video {
+            display: none;
         }
     }
 }
