--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,6 +1,7 @@
 .home{
     color: #ffffff;
     background-color: $bgColor;
+    background-image: linear-gradient(to left, rgb(50, 53, 84), rgb(45, 48, 76), rgb(41, 43, 69), rgb(36, 39, 61), rgb(32, 34, 53), rgb(27, 29, 46), rgb(23, 24, 38), rgb(18, 19, 31), rgb(14, 14, 23), rgb(9, 10, 15), rgb(5, 5, 8), rgb(0, 0, 0));
     margin: 0px;
     padding: 0px;
     overflow: hidden;
