--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -1,7 +1,7 @@
 .scroll-section {
   display: flex;
-  overflow: hidden;
-  height: 100vh;
+  // overflow: hidden;
+  // height: 100vh;
   .bottom-page {
     width: 1px;
     height: 1px;
@@ -11,9 +11,12 @@
     bottom: 20px;
   }
   .cards {
+    width: 100%;
     display: flex;
+    flex-direction: column;
     padding-left: calc(50% - 700px);
-    margin-bottom: -15px;
+    margin-top: 400px;
+    margin-bottom: 100px;
 
     & > .card-home:not(:last-child) {
       z-index: 10;
@@ -24,6 +27,19 @@
       align-items: center;
       margin-right: 80px;
       padding-left: 50px;
+
+      &--left {
+        justify-content: flex-start;
+      }
+
+      &--center {
+        justify-content: center;
+      }
+
+      &--right {
+        justify-content: flex-end;
+        margin-top: 20px;
+      }
 
       a {
         .img-home {
@@ -141,9 +157,10 @@
     overflow-x: hidden;
 
     .cards{
+      margin-top: 200px;
       flex-direction: column;
       padding: 0;
-      margin: 0;
+      // margin: 0;
       overflow-x: hidden;
       
       .card-home{
@@ -185,6 +202,14 @@
           width: auto;
         }
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 400px){
+  .scroll-section {
+    .cards {
+      margin-top: 10px;
     }
   }
 }
