--- a/src/styles/neural.scss
+++ b/src/styles/neural.scss
@@ -10,6 +10,7 @@
         display: flex;
         justify-content: center;
         background: $bgColor;
+        background-image: $bgGradient;
         padding-top: 120px;
         padding-bottom: 120px;
         @include padding-both;
@@ -66,6 +67,7 @@
     .reviews {
         overflow: hidden;
         background-color: $bgColor;
+        background-image: $bgGradient;
         color: white;
         padding-top: 150px;
         padding-bottom: 30px;
@@ -246,6 +248,7 @@
     } // reviews section 
     .all-reviews {
         background-color: $bgColor;
+        background-image: $bgGradient;
         color: white;
         overflow: hidden;
         height: 0;
