--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -149,11 +149,13 @@
 
 @media only screen and (max-width: 800px){
   .scroll-section{
+    margin-bottom: -100px;
     height: auto;
     display: flex;
     justify-content: center;
     margin-top: 120px;
-    margin-bottom: 150px;
+    // margin-bottom: 150px;
+
     overflow-x: hidden;
 
     .cards{
@@ -188,6 +190,7 @@
 
 @media only screen and (max-width: 425px){
   .scroll-section {
+    margin-bottom: -100px;
     .cards {
       @include padding-both;
 
