--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,3 @@
 $lightblue: #2979ff;
 $bgColor : #0d0f1c;
+$bgGradient: linear-gradient(to left, rgb(50, 53, 84), rgb(45, 48, 76), rgb(41, 43, 69), rgb(36, 39, 61), rgb(32, 34, 53), rgb(27, 29, 46), rgb(23, 24, 38), rgb(18, 19, 31), rgb(14, 14, 23), rgb(9, 10, 15), rgb(5, 5, 8), rgb(0, 0, 0));
